--- a/branches/MonoGame/MonoGame/MonoGame.Framework/Jypeli.MonoGame.Framework.Linux.csproj
+++ b/branches/MonoGame/MonoGame/MonoGame.Framework/Jypeli.MonoGame.Framework.Linux.csproj
@@ -14,24 +14,26 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Linux\Debug</OutputPath>
+    <OutputPath>bin\Linux\x86\Debug\</OutputPath>
     <DefineConstants>DEBUG;LINUX;OPENGL</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <PlatformTarget>x86</PlatformTarget>
     <ConsolePause>false</ConsolePause>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <DocumentationFile>bin\Linux\x86\Debug\Jypeli.MonoGame.Framework.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <DebugType>none</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Linux\Release</OutputPath>
+    <OutputPath>bin\Linux\x86\Release\</OutputPath>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <PlatformTarget>x86</PlatformTarget>
     <ConsolePause>false</ConsolePause>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <DefineConstants>LINUX;OPENGL</DefineConstants>
+    <DocumentationFile>bin\Linux\x86\Release\Jypeli.MonoGame.Framework.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
