--- a/branches/MonoGame/Physics2d/Physics2d-MacOS.csproj
+++ b/branches/MonoGame/Physics2d/Physics2d-MacOS.csproj
@@ -88,13 +88,29 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PhysicsClient.cs" />
-    <Compile Include="Assets\PlatformCharacter.cs" />
     <Compile Include="Assets\PlatformWandererBrain.cs" />
     <Compile Include="Assets\Tank.cs" />
     <Compile Include="Assets\Weapon.cs" />
     <Compile Include="Assets\WeaponTemplates.cs" />
+    <Compile Include="Physics2DDotNet\Shapes\ShapeHelper.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Physics2DDotNet\Shapes\VertexHelper.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Assets\PlatformCharacter.cs" />
     <Compile Include="Joints\AxleJoint.cs" />
+    <Compile Include="PhysicsBody\Coefficients.cs" />
+    <Compile Include="PhysicsBody\Collisions.cs" />
+    <Compile Include="PhysicsBody\CollisionShapeParameters.cs" />
+    <Compile Include="PhysicsBody\CollisionShapeQuality.cs" />
+    <Compile Include="PhysicsBody\Dimensions.cs" />
+    <Compile Include="PhysicsBody\Inertia.cs" />
+    <Compile Include="PhysicsBody\Movement.cs" />
+    <Compile Include="PhysicsBody\PhysicsBody.cs" />
+    <Compile Include="Physics2dEngine.cs" />
+    <Compile Include="PhysicsGame.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Physics2DDotNet\ALVector2D.cs" />
     <Compile Include="Physics2DDotNet\Body.cs" />
     <Compile Include="Physics2DDotNet\DistanceGrid.cs" />
@@ -104,7 +120,6 @@
     <Compile Include="Physics2DDotNet\PhysicsEngine.cs" />
     <Compile Include="Physics2DDotNet\PhysicsHelper.cs" />
     <Compile Include="Physics2DDotNet\PhysicsTimer.cs" />
-    <Compile Include="Physics2DDotNet\WinRTCompat.cs" />
     <Compile Include="Physics2DDotNet\Collections\AdvReaderWriterLock.cs" />
     <Compile Include="Physics2DDotNet\Collections\ImplicitCastCollection.cs" />
     <Compile Include="Physics2DDotNet\Collections\ReadOnlyThreadSafeCollection.cs" />
@@ -157,22 +172,8 @@
     <Compile Include="Physics2DDotNet\Shapes\PolygonShape.cs" />
     <Compile Include="Physics2DDotNet\Shapes\RaySegmentsShape.cs" />
     <Compile Include="Physics2DDotNet\Shapes\Shape.cs" />
-    <Compile Include="Physics2DDotNet\Shapes\ShapeHelper.cs" />
-    <Compile Include="Physics2DDotNet\Shapes\VertexHelper.cs" />
     <Compile Include="Physics2DDotNet\Solvers\CollisionSolver.cs" />
     <Compile Include="Physics2DDotNet\Solvers\ISequentialImpulsesJoint.cs" />
     <Compile Include="Physics2DDotNet\Solvers\SequentialImpulses.cs" />
-    <Compile Include="PhysicsBody\Coefficients.cs" />
-    <Compile Include="PhysicsBody\CollisionShapeParameters.cs" />
-    <Compile Include="PhysicsBody\CollisionShapeQuality.cs" />
-    <Compile Include="PhysicsBody\Collisions.cs" />
-    <Compile Include="PhysicsBody\Dimensions.cs" />
-    <Compile Include="PhysicsBody\Inertia.cs" />
-    <Compile Include="PhysicsBody\Movement.cs" />
-    <Compile Include="PhysicsBody\PhysicsBody.cs" />
-    <Compile Include="PhysicsGame\Joints.cs" />
-    <Compile Include="PhysicsGame\PhysicsGame.cs" />
-    <Compile Include="PhysicsGame\PhysicsGameBase.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
 </Project>
