--- a/branches/MonoGame/SimplePhysics/SimplePhysics-VS2010.csproj
+++ b/branches/MonoGame/SimplePhysics/SimplePhysics-VS2010.csproj
@@ -34,9 +34,9 @@
   <ItemGroup>
     <Compile Include="AssemblyInfo.cs" />
     <Compile Include="Collisions.cs" />
-    <Compile Include="PhysicsClient.cs" />
-    <Compile Include="PhysicsGame.cs" />
+    <Compile Include="SimplePhysicsEngine.cs" />
     <Compile Include="PhysicsBody.cs" />
+    <Compile Include="PhysicsGame.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Jypeli\Jypeli-VS2010.csproj">
