--- a/branches/MonoGame/SimplePhysics/SimplePhysics-WP8.csproj
+++ b/branches/MonoGame/SimplePhysics/SimplePhysics-WP8.csproj
@@ -75,9 +75,9 @@
   <ItemGroup>
     <Compile Include="AssemblyInfo.cs" />
     <Compile Include="Collisions.cs" />
-    <Compile Include="PhysicsClient.cs" />
-    <Compile Include="PhysicsGame.cs" />
+    <Compile Include="SimplePhysicsEngine.cs" />
     <Compile Include="PhysicsBody.cs" />
+    <Compile Include="PhysicsGame.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Jypeli\Jypeli-WP8.csproj">
